# mime-settings

./: .clang-format  AGENTS.md  CMakeLists.txt  Makefile  mime-settings.desktop
src/: main.cpp
src/assets/: assets.qrc
src/models/: MimeTypeFilterProxy.cpp  MimeTypeFilterProxy.h  MimeTypeModel.cpp  MimeTypeModel.h
src/services/: AppRegistry.cpp  AppRegistry.h  MimeAssociationService.cpp  MimeAssociationService.h  MimeDefaultsStore.cpp  MimeDefaultsStore.h
src/ui/: DetailsPane.cpp  DetailsPane.h  MainWindow.cpp  MainWindow.h
src/utils/: XdgPaths.cpp  XdgPaths.h
